<resources>
    <string name="app_name">Intelligent_Farming</string>
    <string name="user_name">User Name</string>
    <string name="mobile_no">Mobile Number</string>
    <string name="email_id">Email id</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>

    <string name="newUser">Not a Member yet? Sign Up here.</string>
    <string name="oldUser">Already Signed Up? Sign In here.</string>
    <string name="login">LOGIN</string>
    <string name="signup">SIGN UP</string>
    <string name="forgot">Forget Password?</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Logout</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="request_prompt">Choose a country</string>
    <string-array name="request_arrays">
        <item>Select Request Type</item>
        <item>Maintenance</item>
        <item>Installation</item>
    </string-array>

</resources>
