<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.kuldeep.intelligent_farming.Login_Activity"
    android:background="@color/background">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/rect_edittext"
        android:weightSum="1">
        <LinearLayout
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="0.35">
            <ImageView
                android:id="@+id/logo_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/logo"
                android:gravity="center"
                />
        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.2">
            <LinearLayout
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/user_name"
                    android:hint="@string/user_name"
                    android:textColorHint="@color/hintcolor"
                    android:textColor="@color/black"
                    android:padding="10dp"
                    android:background="@drawable/round_edittext"
                    android:textSize="16sp"
                    android:drawableStart="@drawable/user"
                    android:drawablePadding="8dp"
                    android:gravity="center_vertical"
                    android:elevation="2dp"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/mobile_no"
                    android:hint="@string/mobile_no"
                    android:textColorHint="@color/hintcolor"
                    android:textColor="@color/black"
                    android:padding="10dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/round_edittext"
                    android:textSize="16sp"
                    android:drawableStart="@drawable/mobile"
                    android:drawablePadding="8dp"
                    android:gravity="center_vertical"
                    android:inputType="number"
                    android:elevation="2dp"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/email_id"
                    android:hint="@string/email_id"
                    android:textColorHint="@color/hintcolor"
                    android:textColor="@color/black"
                    android:padding="10dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/round_edittext"
                    android:textSize="16sp"
                    android:drawableStart="@drawable/email"
                    android:drawablePadding="8dp"
                    android:gravity="center_vertical"
                    android:inputType="textEmailAddress"
                    android:elevation="2dp"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/login_password"
                    android:hint="@string/password"
                    android:textColorHint="@color/hintcolor"
                    android:textColor="@color/black"
                    android:layout_marginTop="10dp"
                    android:padding="10dp"
                    android:background="@drawable/round_edittext"
                    android:textSize="16sp"
                    android:drawableStart="@drawable/password"
                    android:drawablePadding="8dp"
                    android:gravity="center_vertical"
                    android:inputType="textPassword"
                    android:elevation="2dp"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/confirm_password"
                    android:hint="@string/confirm_password"
                    android:textColorHint="@color/hintcolor"
                    android:textColor="@color/black"
                    android:layout_marginTop="10dp"
                    android:padding="10dp"
                    android:background="@drawable/round_edittext"
                    android:textSize="16sp"
                    android:drawableStart="@drawable/password"
                    android:drawablePadding="8dp"
                    android:gravity="center_vertical"
                    android:inputType="textPassword"
                    android:elevation="2dp"/>
                <RadioGroup
                    android:padding="10dp"
                    android:id="@+id/radioSex"
                    android:background="@drawable/round_edittext"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:paddingLeft="10dp"
                        android:textColor="@color/colorPrimary"
                        android:text="Gender"
                        />
                    <RadioButton
                        android:layout_marginLeft="30dp"
                        android:id="@+id/radioMale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Male"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:textColor="@color/colorPrimary"
                        android:checked="true" />
                    <RadioButton
                        android:layout_marginLeft="30dp"
                        android:id="@+id/radioFemale"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:textColor="@color/colorPrimary"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Female" />
                </RadioGroup>

            </LinearLayout>
        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="0.45"
            android:gravity="bottom">
            <Button
                android:id="@+id/signipbtn"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:padding="3dp"
                android:background="@drawable/login_button_selector"
                android:text="@string/signup"
                android:textColor="#FFFFFF"
                android:textSize="17sp"
                android:textStyle="bold"
                android:elevation="3dp"
                />
        </LinearLayout>

    </LinearLayout>
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="20dp"
        android:visibility="gone" />
</LinearLayout>
